syntax = "proto3";
package authly.service;

import "google/protobuf/struct.proto";

service AuthlyService {
    // Fetch the configuration of this service.
    rpc GetConfiguration (Empty) returns (ServiceConfiguration);

    // Fetch metadata about the service using this API.
    rpc GetMetadata (Empty) returns (ServiceMetadata);

    // Exchange a valid session for an access token.
    // The session info is passed as Authorization header or cookie.
    rpc GetAccessToken (Empty) returns (AccessToken);

    // Get the current property mapping for the service (deprecated, use GetConfiguration).
    rpc GetResourcePropertyMappings (Empty) returns (PropertyMappingsResponse);

    // Perform remote access control.
    // A valid access token must be passed in an Authorization bearer.
    rpc AccessControl (AccessControlRequest) returns (AccessControlResponse);

    // Make Authly sign the given certificate signing request using the local CA.
    rpc SignCertificate (CertificateSigningRequest) returns (Certificate);

    // Subscribe to Authly messages.
    rpc Messages (Empty) returns (stream ServiceMessage);

    // Respond to a ping.
    rpc Pong (Empty) returns (Empty);
}

// Service configuration.
//
// Important information for the service to function.
message ServiceConfiguration {
    // Resource property mapping namespaces.
    // Necessary for access control.
    repeated PropertyMappingNamespace property_mapping_namespaces = 1;

    // The hosts that can be used to reach this service.
    repeated string hosts = 2;
}

// Metadata about the service.
//
// This information is less important than the ServiceConfiguration.
message ServiceMetadata {
    // The entity ID of this service.
    bytes entity_id = 1;

    // The label given to this service.
    string label = 2;

    // The namespaces available to this service.
    repeated NamespaceMetadata namespaces = 3;
}

// Metadata about a namespace.
message NamespaceMetadata {
    // The Authly ID of this namespace.
    bytes namespace_id = 1;

    // The label given to this namespace.
    string label = 2;

    // Metadata stored in Authly about this namespace.
    google.protobuf.Struct metadata = 3;
}

// Metadata about a service namespace.

// An access token response.
message AccessToken {
    // The token in encoded format.
    string token = 1;

    // The entity ID that the token represents.
    bytes entity_id = 2;
}

// The response of a property mappings request.
message PropertyMappingsResponse {
    // The list of namespaces.
    repeated PropertyMappingNamespace namespaces = 1;
}

// A mapping for a property namespace.
message PropertyMappingNamespace {
    // The namespace name.
    string label = 1;

    // The list of properties in the namespace.
    repeated PropertyMapping properties = 2;
}

// A mapping for a single property.
message PropertyMapping {
    // The property label.
    string label = 1;

    // The list of attributes.
    repeated AttributeMapping attributes = 2;
}

// A mapping for a single attribute of property.
message AttributeMapping {
    // The attribute label.
    string label = 1;

    // The attribe object id.
    bytes obj_id = 2;
}

// An access control request.
message AccessControlRequest {
    // list of resource attributes in byte encoding.
    repeated bytes resource_attributes = 1;

    // list of peer entity attributes known to the service.
    // The peer is the client of the service initiating the access control request.
    repeated bytes peer_entity_attributes = 2;

    // list of peer entity ids to include as subject paramaters.
    repeated bytes peer_entity_ids = 3;
}

// The value/outcome of an access control evaluation.
enum AccessControlValue {
    // Access is denied.
    DENY = 0;
    // Access is allowed.
    ALLOW = 1;
}

// The response of an access control evaluation.
message AccessControlResponse {
    // The value/outcome of the access control evaluation.
    AccessControlValue value = 1;
}

// An X509 certificate signing request.
message CertificateSigningRequest {
    // The DER encoding of the certificate signing request.
    bytes der = 1;
}

// An X509 certificate.
message Certificate {
    // The DER encoding of the certificate.
    bytes der = 1;
}

// An asynchronous message to the service that it should respond to.
message ServiceMessage {
    // The kind of message.
    oneof ServiceMessageKind {
        // The service should reload all Authly-related configuration including certificates,
        // close and then re-open Authly connection.
        //
        // The reason for this might be renewed certificates, that the client has been dismissed by Authly, or other reasons.
        Empty reload_ca = 1;

        // The service should reload all locally cached data received through this gRPC service.
        Empty reload_cache = 2;

        // Authly tries to ping the service and the service should respond with invoking the `Pong` rpc.
        Empty ping = 3;
    }
}

// Represents no information being sent.
message Empty {}
